<resources>
    <string name="app_name">android_notepad</string>
    <string name="note_list_title">我的备忘</string>
    <string name="add_new_note">+</string>
    <string name="add_menu_title">选择操作</string>
    <string name="note_type_text">文本</string>
    <string name="note_type_image">图文</string>
    <string name="note_type_video">视频</string>
    <string name="cancel">取消</string>
    <string name="add_new_note_title">添加新备忘</string>
    <string name="note_detail_title">备忘详情</string>
    <string name="text_add_new_note">添加新备忘</string>
    <string name="add_note_text_title">备忘录标题</string>
    <string name="add_note_text_author">备忘录作者</string>
    <string name="add_note_text_hint">说说您现在的心情...</string>
    <string name="setting">设置</string>
</resources>
